ansible-exercises/k8_manifests/helm-mysql-app-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: mysql-java-app-ingress
spec:
  ingressClassName: nginx
  rules:
   - host: aad5c44e91d0a4408849b778198a2c4d-310330502.eu-north-1.elb.amazonaws.com
     http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: java-mysql-app-service
              port:
                number: 8080
