ansible-exercises/k8_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-java-app-ingress
  namespace: java-app
spec:
  ingressClassName: nginx
  rules:
  - host: "affca2b25438647c29ca9dedf66c4c85-1501822729.eu-north-1.elb.amazonaws.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-mysql-app-service
            port:
              number: 8080
